--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@types/express": "^5.0.0",
+    "@types/http-errors": "^2.0.4",
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.9",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
@@ -29,6 +30,7 @@
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
     "express": "^4.21.1",
+    "http-errors": "^2.0.0",
     "mongoose": "^8.7.1",
     "morgan": "^1.10.0"
   }
