--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,10 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.0",
     "@types/http-errors": "^2.0.4",
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.9",
@@ -28,10 +30,13 @@
     "typescript-eslint": "^8.9.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "http-errors": "^2.0.0",
     "mongoose": "^8.7.1",
     "morgan": "^1.10.0"
