--- a/backend/package.json
+++ b/backend/package.json
@@ -30,8 +30,10 @@
     "typescript-eslint": "^8.9.0"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
