--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,9 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "takenoteapp": "file:.."
   },
-
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@types/axios": "^0.9.36",
